--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function zoomed() {
       .style("top", function(d) { return d[1] * 256 + "px"; })
       .each(function(d) {
         var svg = d3.select(this);
-        this._xhr = d3.json(":8001/rul/" + d[2] + "/" + d[0] + "/" + d[1] + ".json", function(error, json) {
+        this._xhr = d3.json("/db/" + d[2] + "/" + d[0] + "/" + d[1] + ".json", function(error, json) {
           var k = Math.pow(2, d[2]) * 256; // size of the world in pixels
 
           tilePath.projection()
