--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ new L.geoJson({"type": "LineString","coordinates":[[0,0],[0,0]]}).addTo(map);
   layerName: "vectile",
   style: function(d)
       {
-          return "fill:#8f4"
+          return "stroke:#6af; stroke-width:1px;"
       }
 
 }).addTo(map);
