--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <!-- from http://bl.ocks.org/NelsonMinar/5851197 -->
 <html lang="en"><head>
   <meta charset="utf-8">
@@ -35,7 +35,7 @@
     width:100%;
   }
 
-  path.rivers { stroke-linejoin; round; stroke-linecap: round; stroke:#6af; stroke-width:1px;}
+  path.rivers { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#6af; stroke-width:1px;}
 
   </style>
 
