--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0"/>
 
   <title>RULmap — map of Nature an Halo Habitat of Russia</title>
- 
+
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5/leaflet.ie.css" />
@@ -21,7 +21,7 @@
       margin: 0;
       font-family: Helvetica, Arial, sans-serif; font-size: 12px;
       overflow: hidden;
-      background-color: #222;
+      background-color: #fff;
 
   }
   .leaflet-popup-content-wrapper {
