--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ L.TileLayer.d3_topoJSON =  L.TileLayer.extend({
 
         if (!tile.nodes && !tile.xhr) {
             tile.xhr = d3.json(ttt=this.getTileUrl(tilePoint),function(error, tjData) {
-                console.log(ttt,tjData,error);
+                //console.log(ttt,tjData,error);
                 if (error) {
                     console.log(error);
                 } else {
