--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <style type="text/css">
   html, body { height: 100% }
-  #map {   min-height: 100%; background-color: #222;}
+  #map {   min-height: 100%; background-color: #fff;}
   body {
       margin: 0;
       font-family: Helvetica, Arial, sans-serif; font-size: 12px;
@@ -28,13 +28,7 @@
       -webkit-border-radius: 5px;
       border-radius: 5px;
   }
-  #slider_cont{
-    position: absolute;
-    bottom:0;
-    left:0;
-    width:100%;
-  }
-
+  
   path.rivers { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#6af; stroke-width:1px;}
 
   </style>
