--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ L.TileLayer.d3_topoJSON =  L.TileLayer.extend({
         }
     }
 });
- 
+
 // Construct map, center if no location provided
 var map = L.map('map', { minZoom: 1, maxZoom: 16 } );
 
@@ -252,7 +252,7 @@ if (!window.location.hash) {
 // Add a fake GeoJSON line to coerce Leaflet into creating the <svg> tag that d3_geoJson needs
 new L.geoJson({"type": "LineString","coordinates":[[0,0],[0,0]]}).addTo(map);
 
-  new L.TileLayer.d3_topoJSON("http://_ec2host_/rivers/{z}/{x}/{y}.topojson", {
+  new L.TileLayer.d3_topoJSON("http://_ec2host_/tiles/rivers/{z}/{x}/{y}.topojson", {
 //new L.TileLayer.d3_topoJSON("http://54.72.184.190/rivers/{z}/{x}/{y}.topojson", {
   class: "rivers",
   layerName: "vectile",
