--- a/index.html
+++ b/index.html
@@ -241,6 +241,31 @@ L.TileLayer.d3_topoJSON =  L.TileLayer.extend({
     }
 });
 
+// get parameters http://stackoverflow.com/questions/979975/how-to-get-the-value-from-url-parameter
+var QueryString = function () {
+  // This function is anonymous, is executed immediately and
+  // the return value is assigned to QueryString!
+  var query_string = {};
+  var query = window.location.search.substring(1);
+  var vars = query.split("&");
+  for (var i=0;i<vars.length;i++) {
+    var pair = vars[i].split("=");
+    	// If first entry with this name
+    if (typeof query_string[pair[0]] === "undefined") {
+      query_string[pair[0]] = pair[1];
+    	// If second entry with this name
+    } else if (typeof query_string[pair[0]] === "string") {
+      var arr = [ query_string[pair[0]], pair[1] ];
+      query_string[pair[0]] = arr;
+    	// If third or later entry with this name
+    } else {
+      query_string[pair[0]].push(pair[1]);
+    }
+  }
+    return query_string;
+} ();
+if (!QueryString.layer) QueryString.layer="rivers";
+
 // Construct map, center if no location provided
 var map = L.map('map', { minZoom: 1, maxZoom: 16 } );
 
@@ -252,9 +277,9 @@ if (!window.location.hash) {
 // Add a fake GeoJSON line to coerce Leaflet into creating the <svg> tag that d3_geoJson needs
 new L.geoJson({"type": "LineString","coordinates":[[0,0],[0,0]]}).addTo(map);
 
-  new L.TileLayer.d3_topoJSON("http://_ec2host_/tiles/rivers/{z}/{x}/{y}.topojson", {
+  new L.TileLayer.d3_topoJSON("http://_ec2host_/tiles/"+QueryString.layer+"/{z}/{x}/{y}.topojson", {
 //new L.TileLayer.d3_topoJSON("http://54.72.184.190/rivers/{z}/{x}/{y}.topojson", {
-  class: "rivers",
+  class: QueryString.layer,
   layerName: "vectile",
   style: function(d)
       {
@@ -263,6 +288,6 @@ new L.geoJson({"type": "LineString","coordinates":[[0,0],[0,0]]}).addTo(map);
 
 }).addTo(map);
 
- 
+
 </script>
 </body></html>
