--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       border-radius: 5px;
   }
 
-  path.rivers { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#6af; stroke-width:1px;}
+path.rivers { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#6af; stroke-width:1px;}
+path.roads { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#444; stroke-width:1px;}
 
   </style>
 
@@ -273,7 +274,7 @@ var hash = new L.Hash(map);
 if (!window.location.hash) {
     map.setView([55.75,37.65], 11);
 }
-       
+
 // Add a fake GeoJSON line to coerce Leaflet into creating the <svg> tag that d3_geoJson needs
 new L.geoJson({"type": "LineString","coordinates":[[0,0],[0,0]]}).addTo(map);
 
