--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
   }
 
 path.rivers { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#6af; stroke-width:1px;}
+path.water { fill:#6af; stroke:none; }
+path.elevation { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#ccc; stroke-width:1px;}
+path.buildings { fill:#888; stroke:none; }
+path.power_station { fill:#fa6; stroke:none; }
+path.power_generator { fill:#f6a; stroke:none; }
+path.man_made { fill:#666; stroke:none; }
+path.forest { fill:#6fa; stroke:none; }
+path.veg { fill:#afc; stroke:none; }
 path.roads { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#444; stroke-width:1px;}
+path.power_line { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#fa6; stroke-width:1px;}
 
   </style>
 
