--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@ path.rivers { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#
 path.water { fill:#6af; stroke:none; }
 path.elevation { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#ccc; stroke-width:1px;}
 path.buildings { fill:#888; stroke:none; }
-path.power_station { fill:#fa6; stroke:none; }
-path.power_generator { fill:#f6a; stroke:none; }
+path.power_station { fill:#fa6; stroke:none; stroke-linejoin; round; stroke-linecap: round; stroke:#fa6; stroke-width:1px;}
+path.power_generator { fill:#f6a; stroke:none; stroke-linejoin; round; stroke-linecap: round; stroke:#f6a; stroke-width:1px;}
 path.man_made { fill:#666; stroke:none; }
 path.forest { fill:#6fa; stroke:none; }
 path.veg { fill:#afc; stroke:none; }
 path.roads { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#444; stroke-width:1px;}
 path.power_line { stroke-linejoin; round; stroke-linecap: round; fill:none; stroke:#fa6; stroke-width:1px;}
-#menu { 
+#menu {
   background-color: rgba(240,240,240,0.7);
   position: absolute;
   height: 100%;
@@ -236,8 +236,6 @@ path.power_line { stroke-linejoin; round; stroke-linecap: round; fill:none; stro
 	};
 })(window);
 
-
-
 L.TileLayer.d3_topoJSON =  L.TileLayer.extend({
     onAdd : function(map) {
         L.TileLayer.prototype.onAdd.call(this,map);
@@ -309,12 +307,15 @@ var hash = new L.Hash(map);
 if (!window.location.hash) {
     map.setView([55.75,37.65], 11);
 }
-
+ 
 // Add a fake GeoJSON line to coerce Leaflet into creating the <svg> tag that d3_geoJson needs
 new L.geoJson({"type": "LineString","coordinates":[[0,0],[0,0]]}).addTo(map);
 
-  new L.TileLayer.d3_topoJSON("http://_ec2host_/tiles/"+QueryString.layer+"/{z}/{x}/{y}.topojson", {
+new L.TileLayer.d3_topoJSON("http://_ec2host_/tiles/"+QueryString.layer+"/{z}/{x}/{y}.topojson", {
 //new L.TileLayer.d3_topoJSON("http://54.72.184.190/rivers/{z}/{x}/{y}.topojson", {
+  pointToLayer: function (feature, latlng) {
+        return L.circleMarker(latlng, { radius: 3 });
+    },
   class: QueryString.layer,
   layerName: "vectile",
   style: function(d)
