--- a/oes_ru_map.html
+++ b/oes_ru_map.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=1024">
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <!--script src="http://code.jquery.com/jquery-1.11.1.min.js"></script-->
-<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.11/d3.min.js"></script>
+<script src="d3.v3.min.js"></script>
 <script src="oes_ru_map.js"></script>
+<script src="oes_nw_map.js"></script>
 </head>
 <body>
+<div id="oes_nw_map_svg">
+</div>
 <div id="oes_ru_map_svg">
 </div>
 </body>
