--- a/oes_ru_map.html
+++ b/oes_ru_map.html
@@ -9,8 +9,11 @@
 <script src="d3.v3.min.js"></script>
 <script src="oes_ru_map.js"></script>
 <script src="oes_nw_map.js"></script>
+<script src="exp_map.js"></script>
 </head>
 <body>
+<div id="exp_map_svg">
+</div>
 <div id="oes_nw_map_svg">
 </div>
 <div id="oes_ru_map_svg">
