--- a/oes_ru_map.html
+++ b/oes_ru_map.html
@@ -10,12 +10,19 @@
 <script src="oes_ru_map.js"></script>
 <script src="oes_nw_map.js"></script>
 <script src="exp_map.js"></script>
+<script src="pro_map.js"></script>
 </head>
 <body>
+Карта 2
+<div id="pro_map_svg">
+</div>
+Карта 5
 <div id="exp_map_svg">
 </div>
+Карта 3.2
 <div id="oes_nw_map_svg">
 </div>
+Карты 3.1
 <div id="oes_ru_map_svg">
 </div>
 </body>
